--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-slider-component": "^3.2.12",
+    "vue-video-player": "^5.0.2",
     "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
   },
